fixed an overflow

--- a/src/App.css
+++ b/src/App.css
@@ -25,15 +25,14 @@
 }
 .genc{
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 .imageContainer{
     position: relative;
     display:flex;
     justify-content:center;
-    margin: 1.5rem;
     border: 3px solid green;
-    
 }
 .boundingbox{
   position: absolute; 
